nexus/static/css/base.css
/* ... */
main section>p {
    padding: 0px 10px;
}

main section section {
    box-shadow: none;
}

main div.cardblock {
    width: 90%;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    grid-auto-rows: 1fr;
    padding-top:2em;
}
main div.cardblock section.card {
    min-height: 250px;
    max-height: 400px;
    flex-basis: 30%;
    min-width:250px;
    padding:auto;
    margin:10px auto;
}
main div.cardblock section.card.short {
    min-height: 50px;
    max-height: 150px;
}
main div.cardblock section.card.short h3{
    margin: 0 auto;
    text-align: center;
}
main div.cardblock section.card div.imgcard {
    display:flex;
    justify-content: center;
    align-items: center;
    height: 90%;
    width: 100%;
    padding:5px;
}
main div.cardblock section.card div img {
    width: 100%;
}

section.card h2 {
    padding-left: 10px;
    text-align: center;
    font-size: 1.3em;
}
section.card p {
    padding: 0px 10px;
}
section.card p.center {
    text-align: center;
}
section.card ul {
    list-style-type: disc;
    padding-left: 2em;
}

main div.cardbutton { 
    margin-left: auto;
    margin-right: auto; 
    margin-bottom: 8px; 
}
main img.cardcontent {  
    display: table-cell;
    text-align: center;
    vertical-align: middle;
    padding: 10px 20px;
    margin: auto;
    justify-content: center;
    border: none;
    border-radius: 8px;
    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.18);
    cursor: pointer;
}

main div.cardbutton img.cardcontent { 
    display: block;
    width:90%;
    padding: 4px 10px;
}

main a.cardbutton, main div.cardbutton a p.cardbutton {  
    display: block;
    width: 12em;
    text-align: center;
    vertical-align: middle;
    padding: 10px 20px;
    margin: auto;
    justify-content: center;
    min-width: 4em;
    min-height: 2.5em;

    color: var(--primary-fg);
    font-family: inherit;
    font-size: inherit;
    line-height: 1.1;

    background-color: var(--secondary);
    border: none;
    border-radius: 8px;
    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.18);

    cursor: pointer;
    transition: 220ms all ease-in-out;    
}
main a.cardbutton:hover, main div.cardbutton a p.cardbutton:hover {  
    background-color: var(--secondary-emphasis);
}

main a.cardbutton:focus, main div.cardbutton a p.cardbutton:focus {
    outline-style: solid;
    outline-color: transparent;
    box-shadow: 0 0 0 4px var(--accent);
}


main a.cardbutton.NYI {  
    pointer-events: none;
    background-color: var(--primary-fg-off);
    color: var(--info-off);
}

img.main-bg {
    opacity: 0.4;
    position: absolute;
    left: 0;
    top: 7px;
    width: 100%;
    height: 600px;
    z-index: -100;
    object-fit: cover;
    object-position: 80%;
}

main ul {
    list-style: none;
    padding-left: 1em;
}

main li {
    margin-bottom: 4px;
}

main table {
    text-align: left;
    border-spacing: 0px;
    /* width: 100%; */
}

main table tr {
    vertical-align: top;
    text-align: left;
}

main table tr th:first-of-type,
main table tr td:first-of-type {
    text-align: left;
}

a {
    outline: none;
    text-decoration: none;
    padding: 2px 1px 0;
}

a.current {
    font-weight: bold;
    text-decoration: dotted;
}

a:link {
    color: var(--links);
}

a:visited {
    color: var(--links);
}

a:focus {
    background: lightcyan;
}

a:hover {
    background: lightcyan;
}

a:active {
    background: #c0ffff;
    color: gray;
}



header>nav {
    grid-area: header;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    background-color: white;
    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
    height: 95px;
    padding: 1em 1em 1em 5px;
    color: rgb(71, 71, 73);
    font-size: 17px;
    border-bottom: 1px solid gray;
}

header>nav .logo {
    margin-left: 0;
}

header>nav .logo a {
    display:inline-block;
}

header>nav li {
    text-align: center;
    text-transform:uppercase;
}

header>nav .username {
    text-align: right;
    font-size: 0.75em;
    color: var(--logo-med-purple);
    font-weight: bold;
    max-width: 14em;
    margin:auto 1rem;
    text-transform: none;
}

header>nav .logo img {
    vertical-align: middle;
}

main>nav.breadcrumbs {
    align-self: flex-start;
    text-transform: uppercase;
    font-weight: bold;
    font-size: 0.9em;
    padding-left: 10px;
}
main>nav.breadcrumbs>p.breadcrumbs {
    margin-top: 0.7em;
    margin-bottom: 0.2em;
}

body>nav {
    grid-area: nav;
    background-color: white;
    display: flex;
    flex-direction: column;
    padding: 10px;
    border-right: solid dimgrey;
}

body>nav ul {
    list-style: circle;
    max-width: 12em;
    padding-left: 0em;
    margin:0;
}

body>nav details ul {
    padding-left: 1.5em;
}

#filtertree {
    min-width: 15em;
}
#filtertree input#UpdateView {
    font-size: 0.9em;
    font-weight: bold;
    background-color: var(--logo-dk-blue-shadow);
    display:inline;
    margin:0 auto;
    float: right;
    border-width: 1px;
    padding: 3px 10px
}

#filtertree input#UpdateView:hover {
    background-color: var(--logo-lt-blue);
}

#filtertree span.helptext {
    display: none;
}
#filtertree li.skip, #filtertree li.skipFilter, #filtertree div.skip {
    display: none;
}
#filtertree div.viewChoices {
    margin-left: 10px;
    margin-bottom: 10px;
}

#filtertree summary, #filtertree div.viewselect {
    margin-top: 5px;
}

#filtertree div.viewselect input[type='checkbox']{
    position:relative;
    top: 0.15em;
}

#filtertree summary, #filtertree div.viewselect select{
    margin-left: 5px;
    padding:1px;
    font-weight: bold;
    width: 16em;
}

#filtertree label, #resexp_to {
    font-weight: bold;
    font-size: .9em;
}
#filtertree details summary label {
    pointer-events: none;
}
#filtertree details label[for] {
    margin-left:10px;
}

#filtertree label input:checked {
    accent-color: var(--logo-dk-blue);
}
/* ... */

